# manning-pytorch-code

./: .gitignore  pyproject.toml  pyproject.toml.sav
p1ch2/: 2_pre_trained_networks.ipynb
