[tool.poetry]
name = "dlwpt-code"
version = "0.1.0"
description = ""
authors = ["Shawn Cicoria <github@cicoria.com>"]

[tool.poetry.dependencies]
python = "^3.8"
blosc = "^1.9.2"
diskcache = "^5.0.3"
h5py = "^2.10.0"
jupyterlab = "^2.2.8"
matplotlib = "^3.3.2"
numpy = "^1.18"
pillow = "^7.2.0"
scikit-image = "^0.17.2"
scipy = "^1.5.2"
scikit-learn = "^0.23.2"
simpletk = "^0.3.1"
tensorflow = "^2.3.1"
torch = "^1.6.0"
torchvision = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
